--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-timelinev2": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
